Fix Login Bug Datetime

--- a/pages/index.phtml
+++ b/pages/index.phtml
@@ -1,24 +1,1 @@
-<?php
-loadFunctions('core/database');
-loadFunctions('core/file_upload');
-
-$users = simpleSelect('users', ['email' => ['=', 'admin@application.com'], 'password' => ['=', hash('sha256', 'admin')]]);
-$users = simpleDelete('users', ['id' => 9]);
-?>
-<h1>Index</h1>
-<pre>
-<?php print_r($users) ?>
-
-
-
-<?php print_r(uploadFiles()); ?>
-</pre>
-
-<form enctype="multipart/form-data" action="/page/index" method="POST">
-    <!-- MAX_FILE_SIZE deve preceder o campo input -->
-    <input type="hidden" name="MAX_FILE_SIZE" value="30000" />
-    <!-- O Nome do elemento input determina o nome da array $_FILES -->
-    Enviar esse arquivo: <input name="arquivo" type="file" />
-    Enviar esse arquivo: <input name="arquivo2" type="file" />
-    <input type="submit" value="Enviar arquivo" />
-</form>
+<h1>Bem Vindo</h1>
